force-app/main/default/objects/KeyInformation__c/KeyInformation__c.object-meta.xml
<CustomObject>
    <description
  >Map with field of an object has key information to be displayed about a record</description>
    <label>Key Information</label>
    <nameField>
        <displayFormat>KI-{0000}</displayFormat>
        <label>Key Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>