force-app/main/default/objects/KeyInformation__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Field to display key information</description>
    <inlineHelpText>Field to display key information</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>