force-app/main/default/objects/KeyInformation__c/fields/SalesforceObject__c.field-meta.xml
<CustomField>
    <fullName>SalesforceObject__c</fullName>
    <description>Salesforce Object to map key field</description>
    <inlineHelpText>Salesforce Object to map key field</inlineHelpText>
    <label>Salesforce Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>