force-app/main/default/objects/KeyInformation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User related to key information</description>
    <inlineHelpText>User related to key information</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>KeyInformations</relationshipName>
    <type>Lookup</type>
</CustomField>